swap from resend to nodemailer
